--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrajs/collections": "^0.3.3",
     "@glidejs/glide": "^3.5.2",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "firebase": "^8.9.1",
     "firebase-admin": "^10.0.0",
